--- a/Public/index.html
+++ b/Public/index.html
@@ -376,7 +376,7 @@
             </div>
         </div>
     </div> -->
-    <!-- Gallery Section End -->
+    Gallery Section End
 
     <!-- Team Section Begin -->
     <section class="team-section spad">
